Fix javac plugin boundaries and definition lookup